--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
-		<script src="./dist/index.js"></script>
+		<script src="/src/index.ts" type="module"></script>
 	</body>
 </html>
